# fluig-oracle

./: .env-example  .gitignore  README.md  pyproject.toml
scraper_app/scraper/: items.py  pipelines.py  settings.py
scraper_app/scraper/spiders/: fluig_dev_spider.py  fluig_forum_spider.py
src/: app.py
src/core/: langchain_rag.py  validate_prompt_injection.py
src/data/: content_data.db  content_data_bkup.db
