[project]
name = "fluig-oracle"
version = "0.1.0"
description = "A Scrapy spider for Fluig Oracle running with Streamlit and Deepseek"
requires-python = ">=3.12"
dependencies = [
    "scrapy==2.13.2",
    "streamlit==1.46.0",
    "pandas==2.3.0",
    "python-dotenv==1.1.0",
    "markdownify==1.0.0,",
    "BeautifulSoup4==4.13.4",
]